--- a/vuepress/package.json
+++ b/vuepress/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@vuepress/plugin-register-components": "^2.0.0-beta.51",
     "vuepress": "^1.9.7"
   },
   "scripts": {
