--- a/vitepress/package.json
+++ b/vitepress/package.json
@@ -6,9 +6,9 @@
   "author": "ck <ckcode@icloud.com>",
   "license": "MIT",
   "scripts": {
-    "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:serve": "vitepress serve docs"
+    "dev": "vitepress dev docs",
+    "build": "vitepress build docs",
+    "serve": "vitepress serve docs"
   },
   "devDependencies": {
     "vitepress": "^1.0.0-alpha.26",
