--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,9 +14,11 @@ jobs:
         with:
           node-version: 16
           cache: yarn
-      - run: 
-      cd vitepress
-      yarn install --frozen-lockfile
+      - name: cd
+        run: cd viteperss
+
+      - name: install
+        run: yarn install --frozen-lockfile
 
       - name: Build
         run: yarn build
