--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
           node-version: 16
           cache: yarn
       - name: cd
-        run: cd viteperss
+        run: cd /viteperss
 
       - name: install
         run: yarn install --frozen-lockfile
