--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,14 +14,17 @@ jobs:
         with:
           node-version: 16
           cache: yarn
-      - name: cd
-        run: cd vitepress
+      - name: cd && Build
+        run: 
+        cd vitepress
+        yarn
+        yarn build
 
-      - name: install
-        run: yarn install --frozen-lockfile
+      # - name: install
+      #   run: yarn install --frozen-lockfile
 
-      - name: Build
-        run: yarn build
+      # - name: Build
+      #   run: yarn build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
