--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,7 @@ jobs:
           yarn build
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@releases/v3
-        GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        with:
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           branch: build-pages
           folder: dist
