--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,14 +14,21 @@ jobs:
         with:
           node-version: 16
           cache: yarn
-      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+      - name: cd && Build
         run: |
           cd vitepress
-          yarn
+          yarn install --frozen-lockfile
           yarn build
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@releases/v3
+
+      # - name: install
+      #   run: yarn install --frozen-lockfile
+
+      # - name: Build
+      #   run: yarn build
+
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          branch: build-pages
-          folder: ./dist
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: dist
+          publish_branch: build-pages
