--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 0
+          # fetch-depth: 0
+          persist-credentials: false
       - uses: actions/setup-node@v3
         with:
           node-version: 16
@@ -26,9 +27,16 @@ jobs:
       # - name: Build
       #   run: yarn build
 
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
+      # - name: Deploy
+      #   uses: peaceiris/actions-gh-pages@v3
+      #   with:
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      #     publish_dir: docs/.vitepress/dist
+      #     publish_branch: build-pages
+
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: docs/.vitepress/dist
-          # publish_branch: build-pages
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          branch: build-pages
+          folder: dist
