--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,34 +9,35 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          # fetch-depth: 0
-          persist-credentials: false
+          fetch-depth: 0
+          # persist-credentials: false
       - uses: actions/setup-node@v3
         with:
           node-version: 16
           cache: yarn
       - name: cd && Build
-        run: |
-          cd vitepress
-          yarn install --frozen-lockfile
-          yarn build
+        run: cd vitepress
+        # run: |
+        #   cd vitepress
+        #   yarn install --frozen-lockfile
+        #   yarn build
 
-      # - name: install
-      #   run: yarn install --frozen-lockfile
+      - name: install
+        run: yarn install --frozen-lockfile
 
-      # - name: Build
-      #   run: yarn build
+      - name: Build
+        run: yarn build
 
-      # - name: Deploy
-      #   uses: peaceiris/actions-gh-pages@v3
-      #   with:
-      #     github_token: ${{ secrets.GITHUB_TOKEN }}
-      #     publish_dir: docs/.vitepress/dist
-      #     publish_branch: build-pages
-
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@releases/v3
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          branch: build-pages
-          folder: ./dist
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: dist
+          publish_branch: build-pages
+
+      # - name: Deploy 🚀
+      #   uses: JamesIves/github-pages-deploy-action@releases/v3
+      #   with:
+      #     GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+      #     branch: build-pages
+      #     folder: dist
