--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: /vitepress/docs/.vitepress/dist/
+          publish_dir: dist
           publish_branch: build-pages
 
       # - name: Deploy 🚀
