--- a/package.json
+++ b/package.json
@@ -4,5 +4,10 @@
   "main": "index.js",
   "repository": "https://github.com/ckcoding/ckcoding.github.io.git",
   "author": "ck <ckcode@icloud.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "axios": "^1.2.2",
+    "crypto-js": "^4.1.1",
+    "qs": "^6.11.0"
+  }
 }
