--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
   "author": "ck <ckcode@icloud.com>",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.2.2",
+    "axios": "^1.3.4",
+    "body-parser": "^1.20.2",
     "crypto-js": "^4.1.1",
+    "dayjs": "^1.11.7",
+    "exif-js": "^2.3.0",
+    "express": "^4.18.2",
+    "jsdom": "^21.1.1",
     "qs": "^6.11.0"
   }
 }
